[package]
name = "HPMC"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
spin = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
